# CLRS

./: Cargo.toml  README.md
chapter_01/: Cargo.toml
chapter_01/src/: main.rs  section_01.rs  section_02.rs
chapter_01/src/section_01/: ex_01.rs  ex_02.rs  ex_03.rs  ex_04.rs  ex_05.rs
chapter_01/src/section_02/: ex_01.rs  ex_02.rs  ex_03.rs
chapter_02/: Cargo.toml
chapter_02/src/: binary_addition.rs  binary_search.rs  insertion.rs  insertion_sort.rs  main.rs  merge_sort.rs  section_01.rs  section_02.rs  section_03.rs  selection_sort.rs  sum_search.rs
chapter_02/src/section_01/: ex_01.rs  ex_02.rs  ex_03.rs  ex_04.rs
chapter_02/src/section_02/: ex_01.rs  ex_02.rs  ex_03.rs  ex_04.rs
chapter_02/src/section_03/: ex_01.rs  ex_02.rs  ex_03.rs  ex_04.rs  ex_05.rs  ex_06.rs  ex_07.rs
exercises/: Cargo.toml
exercises/src/: lib.rs
