# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
# A workspace is a set of packages that share the same Cargo.lock and output directory.
[workspace]

members = [
    "exercises",
    "chapter_01",
    "chapter_02",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html